--- a/taller1/main/taller1.ipynb
+++ b/taller1/main/taller1.ipynb
@@ -5,9 +5,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Métodos matemáticos**\n",
-    "## **Taller 1**\n",
-    "### **Estudiantes**: Juan C. Rojas V. (202214037) & Esteban Parra C. (????????)"
+    "# **Métodos Computacionales**\n",
+    " **Taller 1**\n",
+    " \n",
+    " **Estudiantes**: Juan C. Rojas V. (202214037) & Esteban Parra C. (????????)"
    ]
   },
   {
@@ -15,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Ejercicio 2.01.1:**\n",
+    "## **Ejercicio 2.01.1:**\n",
     "Escriba una función que calcule el factorial de $n$, con $n \\in \\mathbb{N}$. \n",
     "\n",
     "$$n! = n(n − 1)(n − 2) \\dots 1 $$\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +88,17 @@
     "for i in range(1,21):\n",
     "    print(\"El factorial de %s es %s\"%(i,factorial(i)))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Ejercicio 2.02: Máximos**\n",
+    "\n",
+    "Descargar los datos de: https://raw.githubusercontent.com/asegura4488/Database/main/MetodosComputacionalesReforma/EstrellaEspectro.txt Y diseñar un algoritmo\n",
+    "para encontrar todos los máximos locales en esta serie de datos."
+   ]
   }
  ],
  "metadata": {
@@ -105,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
