--- a/taller1/main/taller1.ipynb
+++ b/taller1/main/taller1.ipynb
@@ -99,6 +99,42 @@
     "Descargar los datos de: https://raw.githubusercontent.com/asegura4488/Database/main/MetodosComputacionalesReforma/EstrellaEspectro.txt Y diseñar un algoritmo\n",
     "para encontrar todos los máximos locales en esta serie de datos."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m     a \u001b[39m=\u001b[39m a\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     11\u001b[0m     x\u001b[39m.\u001b[39mappend(\u001b[39mfloat\u001b[39m(a[\u001b[39m0\u001b[39m]))\n\u001b[1;32m---> 12\u001b[0m     y\u001b[39m.\u001b[39mappend(\u001b[39mfloat\u001b[39;49m(a[\u001b[39m1\u001b[39;49m]))\n\u001b[0;32m     13\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     14\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "datafile = open(\"files/EstrellaEspectro.txt\",'r')\n",
+    "\n",
+    "x = []\n",
+    "y = []\n",
+    "\n",
+    "while True:\n",
+    "    a = datafile.readline()\n",
+    "    if not a == '':\n",
+    "        a = a.split(\"  \")\n",
+    "        x.append(float(a[0]))\n",
+    "        y.append(float(a[1]))\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "x"
+   ]
   }
  ],
  "metadata": {
@@ -117,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
