--- a/taller1/taller1.ipynb
+++ b/taller1/taller1.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,7 +11,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,7 +88,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,7 +105,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "datafile = open(\"files/EstrellaEspectro.txt\",'r')\n",
+    "datafile = open(\"data/EstrellaEspectro.txt\",'r')\n",
     "\n",
     "x = []\n",
     "y = []\n",
@@ -126,11 +123,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si se quiere verificar que un valor $x_i \\in \\{ x_0, x_1, \\dots x_n\\}$ de como salida un máximo de una función $f(x_i)$ se debe comprobar que $$\\frac{f(x_i) - f(x_{i-1})}{x_i - x_{i-1}} > 0$$ y $$\\frac{f(x_{i+1}) - f(x_{i})}{x_{i+1} - x_{i}} < 0$$"
+    "Si se quiere verificar que un valor $x_i \\in \\{ x_0, x_1, \\dots x_n\\}$ dé como salida un máximo de una función $f(x_i)$ se debe comprobar que $$\\frac{f(x_i) - f(x_{i-1})}{x_i - x_{i-1}} > 0$$ y $$\\frac{f(x_{i+1}) - f(x_{i})}{x_{i+1} - x_{i}} < 0$$"
    ]
   },
   {
@@ -196,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -212,7 +208,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.1"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "c9f69d3aee71be54776a55aa2ba674df24312f89c0df54b2489c83ea19829380"
