Adición de ejercicio 3.10.3

--- a/taller1/taller1.ipynb
+++ b/taller1/taller1.ipynb
@@ -245,9 +245,6 @@
    ],
    "source": [
     "fibo_sequence = [0,1]\n",
-    "\n",
-    "\n",
-    "\n",
     "for i in range(2,21):\n",
     "    fibo_sequence.append(fibo_sequence[i-1] + fibo_sequence[i-2])\n",
     "    \n",
@@ -340,6 +337,38 @@
     "plt.plot(np.linspace(0,19,19),phi_stimation)\n",
     "plt.axhline(y=real_phi,color='r',ls='--')\n",
     "plt.legend([\"Estimación usando la serie\",\"Número aureo\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Ejercicio 3.10.3: Raíces de un polinomio**\n",
+    "\n",
+    "Calcular **todas** las raíces reales de:\n",
+    "$$f(x) = 3x^5 +5x^4 -x^3$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Usando el método de bisección\n",
+    "\n",
+    "epsilon = 1.0e-6\n",
+    "\"\"\"\n",
+    "TODO:No estoy muy seguro de si se puede poner la derivada\n",
+    "    directamente o hay que calcularla directamente.\n",
+    "\"\"\"\n",
+    "def function(x):\n",
+    "    return 3*x**5 + 5*x**4-x**3\n",
+    "\n",
+    "def function_prime(x):\n",
+    "    return 15*x**4 + 20*x**3-3*x**2 \n",
+    "\n"
    ]
   }
  ],
