--- a/taller1/taller1.ipynb
+++ b/taller1/taller1.ipynb
@@ -528,7 +528,9 @@
   {
    "cell_type": "code",
    "execution_count": 303,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1546,6 +1548,14 @@
     "    \n",
     "    \n",
     "Animation = anim.FuncAnimation(fig,Update,frames=len(t),init_func=init)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Qué es K?\n",
+    "K es una constante que representa que tan fuerte es el choque entre las dos bolas. Considerando que sus unidades son $\\frac{N}{m^3}$ se puede interpretar como la fuerza que puede recibir (o dar) la partícula por unidad de volumen."
    ]
   },
   {
