--- a/parcial1/parcial1.ipynb
+++ b/parcial1/parcial1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "[1/(12*h), -2/(3*h), 0, 2/(3*h), -1/(12*h)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,15 +83,8 @@
    "source": [
     "**¿Cuál es el orden de aproximación $\\mathcal{O}(h^k)$?**\n",
     "\n",
-    "El orden de aproximación es $\\mathcal{O}(h^4).$ Luego, las derivadas son la suma de los coeficientes.\n"
+    "El orden de aproximación es $\\mathcal{O}(h^4).$ Teniendo en ceunta la ecuación de error de la interpolación, toca tener en cuenta que nuestro polinomio bajo la interpolación es de grado 4; en el cual, con la formula del error de la interpolación podemos extrapolar la parte de la derivada. Donde nuestra derivada va ser de orden del grado del polinomio mas uno. Teniendo en cuenta lo anterior. Podemos ir a la definición de la derivada y de este sabemos que el orden de aproximación del orden de una derivada va ser el orden de la derivada menos uno. De tal manera, sabemos que nuestro orden adquirido por la ecuación de error de interpolación es 5, tenemos así que el orden de la aproximación $\\mathcal{O}(h^4)$.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
