--- a/parcial1/parcial1.ipynb
+++ b/parcial1/parcial1.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "**¿Cuál es el orden de aproximación $\\mathcal{O}(h^k)$?**\n",
     "\n",
-    "El orden de aproximación es $\\mathcal{O}(h^4).$ Teniendo en ceunta la ecuación de error de la interpolación, toca tener en cuenta que nuestro polinomio bajo la interpolación es de grado 4; en el cual, con la formula del error de la interpolación podemos extrapolar la parte de la derivada. Donde nuestra derivada va ser de orden del grado del polinomio mas uno. Teniendo en cuenta lo anterior. Podemos ir a la definición de la derivada y de este sabemos que el orden de aproximación del orden de una derivada va ser el orden de la derivada menos uno. De tal manera, sabemos que nuestro orden adquirido por la ecuación de error de interpolación es 5, tenemos así que el orden de la aproximación $\\mathcal{O}(h^4)$.\n"
+    "El orden de aproximación es $\\mathcal{O}(h^4).$ Teniendo en ceunta la ecuación de error de la interpolación, se debe tener en cuenta que el polinomio bajo la interpolación es de grado 4; en el cual, con la fórmula del error se puede extrapolar la parte de la derivada. Donde nuestra derivada va ser un orden mayor que el grado del polinomio. Teniendo en cuenta lo anterior, podemos ir a la definición de la derivada y de esta se sabe que el orden de aproximación del orden de una derivada va ser el orden de la derivada menos uno. De tal manera, sabemos que nuestro orden adquirido por la ecuación de error de interpolación es 5, tenemos así que el orden de la aproximación $\\mathcal{O}(h^4)$.\n"
    ]
   }
  ],
