--- a/taller2/taller2.ipynb
+++ b/taller2/taller2.ipynb
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "14811ee8",
+   "id": "5a30fa50",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79e72ff0",
+   "id": "e279efcf",
    "metadata": {},
    "source": [
     "En efecto, ambas aproximaciones tienen el mismo orden de magnitud en sus estimaciones. Sin embargo, una sobreestima y otra subestima los valores de la derivada en cada punto."
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f596356",
+   "id": "d20b603d",
    "metadata": {},
    "source": [
     "# Raíces de polinomios\n",
@@ -112,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "5291edbf",
+   "execution_count": 172,
+   "id": "28af1c4e",
    "metadata": {},
    "outputs": [
     {
@@ -123,10 +123,25 @@
        " 1 - x,\n",
        " x**2/2 - 2*x + 1,\n",
        " -x**3/6 + 3*x**2/2 - 3*x + 1,\n",
-       " x**4/24 - 2*x**3/3 + 3*x**2 - 4*x + 1]"
+       " x**4/24 - 2*x**3/3 + 3*x**2 - 4*x + 1,\n",
+       " -x**5/120 + 5*x**4/24 - 5*x**3/3 + 5*x**2 - 5*x + 1,\n",
+       " x**6/720 - x**5/20 + 5*x**4/8 - 10*x**3/3 + 15*x**2/2 - 6*x + 1,\n",
+       " -x**7/5040 + 7*x**6/720 - 7*x**5/40 + 35*x**4/24 - 35*x**3/6 + 21*x**2/2 - 7*x + 1,\n",
+       " x**8/40320 - x**7/630 + 7*x**6/180 - 7*x**5/15 + 35*x**4/12 - 28*x**3/3 + 14*x**2 - 8*x + 1,\n",
+       " -x**9/362880 + x**8/4480 - x**7/140 + 7*x**6/60 - 21*x**5/20 + 21*x**4/4 - 14*x**3 + 18*x**2 - 9*x + 1,\n",
+       " x**10/3628800 - x**9/36288 + x**8/896 - x**7/42 + 7*x**6/24 - 21*x**5/10 + 35*x**4/4 - 20*x**3 + 45*x**2/2 - 10*x + 1,\n",
+       " -x**11/39916800 + 11*x**10/3628800 - 11*x**9/72576 + 11*x**8/2688 - 11*x**7/168 + 77*x**6/120 - 77*x**5/20 + 55*x**4/4 - 55*x**3/2 + 55*x**2/2 - 11*x + 1,\n",
+       " x**12/479001600 - x**11/3326400 + 11*x**10/604800 - 11*x**9/18144 + 11*x**8/896 - 11*x**7/70 + 77*x**6/60 - 33*x**5/5 + 165*x**4/8 - 110*x**3/3 + 33*x**2 - 12*x + 1,\n",
+       " -x**13/6227020800 + 13*x**12/479001600 - 13*x**11/6652800 + 143*x**10/1814400 - 143*x**9/72576 + 143*x**8/4480 - 143*x**7/420 + 143*x**6/60 - 429*x**5/40 + 715*x**4/24 - 143*x**3/3 + 39*x**2 - 13*x + 1,\n",
+       " x**14/87178291200 - x**13/444787200 + 13*x**12/68428800 - 13*x**11/1425600 + 143*x**10/518400 - 143*x**9/25920 + 143*x**8/1920 - 143*x**7/210 + 1001*x**6/240 - 1001*x**5/60 + 1001*x**4/24 - 182*x**3/3 + 91*x**2/2 - 14*x + 1,\n",
+       " -x**15/1307674368000 + x**14/5811886080 - x**13/59304960 + 13*x**12/13685760 - 13*x**11/380160 + 143*x**10/172800 - 143*x**9/10368 + 143*x**8/896 - 143*x**7/112 + 1001*x**6/144 - 1001*x**5/40 + 455*x**4/8 - 455*x**3/6 + 105*x**2/2 - 15*x + 1,\n",
+       " x**16/20922789888000 - x**15/81729648000 + x**14/726485760 - x**13/11119680 + 13*x**12/3421440 - 13*x**11/118800 + 143*x**10/64800 - 143*x**9/4536 + 143*x**8/448 - 143*x**7/63 + 1001*x**6/90 - 182*x**5/5 + 455*x**4/6 - 280*x**3/3 + 60*x**2 - 16*x + 1,\n",
+       " -x**17/355687428096000 + 17*x**16/20922789888000 - 17*x**15/163459296000 + 17*x**14/2179457280 - 17*x**13/44478720 + 221*x**12/17107200 - 221*x**11/712800 + 2431*x**10/453600 - 2431*x**9/36288 + 2431*x**8/4032 - 2431*x**7/630 + 1547*x**6/90 - 1547*x**5/30 + 595*x**4/6 - 340*x**3/3 + 68*x**2 - 17*x + 1,\n",
+       " x**18/6402373705728000 - x**17/19760412672000 + 17*x**16/2324754432000 - 17*x**15/27243216000 + 17*x**14/484323840 - 17*x**13/12355200 + 221*x**12/5702400 - 221*x**11/277200 + 2431*x**10/201600 - 2431*x**9/18144 + 2431*x**8/2240 - 221*x**7/35 + 1547*x**6/60 - 357*x**5/5 + 255*x**4/2 - 136*x**3 + 153*x**2/2 - 18*x + 1,\n",
+       " -x**19/121645100408832000 + 19*x**18/6402373705728000 - 19*x**17/39520825344000 + 323*x**16/6974263296000 - 323*x**15/108972864000 + 323*x**14/2421619200 - 323*x**13/74131200 + 4199*x**12/39916800 - 4199*x**11/2217600 + 46189*x**10/1814400 - 46189*x**9/181440 + 4199*x**8/2240 - 4199*x**7/420 + 2261*x**6/60 - 969*x**5/10 + 323*x**4/2 - 323*x**3/2 + 171*x**2/2 - 19*x + 1]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +150,7 @@
     "import sympy as sym\n",
     "\n",
     "x = sym.Symbol('x')\n",
-    "n = 5\n",
+    "n = 20\n",
     "\n",
     "def Laguerre(n, x):\n",
     "    coeff = sym.exp(x)/sym.factorial(n)\n",
@@ -154,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "e6e30bf1",
+   "execution_count": 173,
+   "id": "c221219e",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +180,37 @@
       "[1.]\n",
       "[0.58578644 3.41421356]\n",
       "[0.41577456 2.29428036 6.28994508]\n",
-      "[0.32254769 1.7457611  4.5366203  9.39507091]\n"
+      "[0.32254769 1.7457611  4.5366203  9.39507091]\n",
+      "[ 0.26356032  3.59642577  7.08581001 12.64080084]\n",
+      "[ 0.2228466   2.99273633  5.77514357  9.83746742 15.98287398]\n",
+      "[ 0.19304368  2.56787674  4.90035308  8.18215344 12.73418029 19.39572786]\n",
+      "[ 0.17027963  2.25108663  4.26670017  7.0459054  10.75851601 15.74067864\n",
+      " 22.86313174]\n",
+      "[ 0.15232223  2.00513516  3.78347397  6.20495678  9.37298525 13.46623691\n",
+      " 18.83359779 26.37407189]\n",
+      "[ 0.13779347  5.55249614  8.33015275 11.84378584 16.27925783 21.99658581\n",
+      " 29.92069701]\n",
+      "[ 0.12579644  3.09113814  5.0292844   7.50988786 10.605951   14.43161376\n",
+      " 19.1788574  25.21770934 33.49719285]\n",
+      "[ 0.11572212  2.83375134  4.59922764  9.62131684 13.00605499 17.11685519\n",
+      " 22.15109038 28.48796725 37.09912104]\n",
+      "[ 0.10714239  2.61659711  4.23884593  8.81500194 11.86140359 15.51076204\n",
+      " 19.88463566 25.18526386 31.8003863  40.72300867]\n",
+      "[ 0.09974751  2.43080108  5.82553622  8.14024014 10.91649951 14.21080501\n",
+      " 18.10489222 22.72338163 28.27298172 35.14944366 44.36608171]\n",
+      "[ 0.09330781  5.42533663  7.56591623 13.13028248 16.65440771 20.7764789\n",
+      " 25.62389423 31.40751917 38.53068331 48.02608557]\n",
+      "[ 0.08764941  3.43708663  9.43831434 12.21422337 15.44152737 19.18015686\n",
+      " 23.51590569 28.57872974 34.5833987  41.94045265 51.70116034]\n",
+      "[ 0.08263821  3.23425612  6.63782921  8.84668551 11.42552932 14.40782304\n",
+      " 17.83828473 21.77826826 26.31531781 31.58177168 31.58177169 37.79609384\n",
+      " 45.37571653 45.37571654 55.38975179]\n",
+      "[ 0.07816917  1.01652018  3.05435311  6.25672507 16.68930627 20.31076764\n",
+      " 24.44068134 29.1682087  34.62792704 34.62792705 41.04181678 48.83392271\n",
+      " 48.83392272 59.09054644]\n",
+      "[ 0.07415878  2.89365138  5.91814156 10.13242372 12.73088146 15.69127836\n",
+      " 19.04899318 22.8508498  27.16066927 32.06912223 32.0691223  37.71290575\n",
+      " 44.31736279 44.31736281 52.31290245 52.31290246 62.80242315]\n"
      ]
     }
    ],
@@ -176,7 +221,7 @@
     "    while error > precision and it <= itmax:\n",
     "        try:\n",
     "            xn1 = xn - f(xn)/df(xn)\n",
-    "            error = np.abs(f(xn)/df(xn))            \n",
+    "            error = np.abs(f(xn)/df(xn))  \n",
     "        except ZeroDivisionError:\n",
     "            print('Division por cero')\n",
     "        it += 1\n",
@@ -204,13 +249,14 @@
     "    Roots.sort()\n",
     "        \n",
     "    return Roots\n",
-    "Last_root = 1\n",
-    "interval = np.linspace(0,10)\n",
+    "Last_root = 5.\n",
+    "interval = np.linspace(0,100)\n",
     "for i in zwanssig[1:]:\n",
     "    f = sym.lambdify(x,i)\n",
     "    df = sym.lambdify(x,sym.diff(i))\n",
     "    roots = GetAllRoots(f,df,interval)\n",
     "    Last_root = roots[-1]\n",
+    "    interval = np.linspace(0,Last_root+100)\n",
     "    print(roots)\n"
    ]
   },
