--- a/taller2/taller2.ipynb
+++ b/taller2/taller2.ipynb
@@ -3294,8 +3294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "25ac464b",
+   "execution_count": 117,
+   "id": "23a12adf",
    "metadata": {},
    "outputs": [
     {
@@ -3307,7 +3307,7 @@
        "1.50000051718624"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3325,6 +3325,105 @@
     "        Sum += weights[N][i]*psi_1(Roots[N+1][i])*function(Roots[N+1][i])\n",
     "        \n",
     "Sum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "774b4a44",
+   "metadata": {},
+   "source": [
+    "**Problema: 19.a**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "467f59c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sym\n",
+    "import numpy as np\n",
+    "\n",
+    "def ecuacion_banda_prohibida(x, Temp,difT):\n",
+    "    numerador = np.tanh((x**2 + difT**2)**(0.5) * 300/(2*Temp))\n",
+    "    denominador = (x**2 + difT**2)**(0.5)\n",
+    "    return (numerador/denominador)/2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21936ba0",
+   "metadata": {},
+   "source": [
+    "**Problema: 19.b**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5656d7fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00290862, 0.0067598 , 0.01059055, 0.01438082, 0.01811556,\n",
+       "       0.02178024, 0.02536067, 0.02884299, 0.03221373, 0.03545984,\n",
+       "       0.03856876, 0.04152846, 0.0443275 , 0.04695505, 0.04940094,\n",
+       "       0.0516557 , 0.05371062, 0.05555774, 0.05718993, 0.05860085,\n",
+       "       0.05978506, 0.06073797, 0.0614559 , 0.06193607, 0.06217662,\n",
+       "       0.06217662, 0.06193607, 0.0614559 , 0.06073797, 0.05978506,\n",
+       "       0.05860085, 0.05718993, 0.05555774, 0.05371062, 0.0516557 ,\n",
+       "       0.04940094, 0.04695505, 0.0443275 , 0.04152846, 0.03856876,\n",
+       "       0.03545984, 0.03221373, 0.02884299, 0.02536067, 0.02178024,\n",
+       "       0.01811556, 0.01438082, 0.01059055, 0.0067598 , 0.00290862])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Roots, Weights = np.polynomial.legendre.leggauss(50)\n",
+    "Temperaturas, difTemp = np.linspace(1, 20, 10000, retstep = True)\n",
+    "Roots\n",
+    "Weights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5f330d",
+   "metadata": {},
+   "source": [
+    "**Problema: 19.c.d**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "889509fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La temperatura crítica es:  12.11041  K.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bustar_temp(Roots, Weights, Temperaturas, difTemp):\n",
+    "    for every in Temperaturas:\n",
+    "        integral_de_e1 = np.sum(Weights*ecuacion_banda_prohibida(Roots, every, difTemp))\n",
+    "        if np.abs((integral_de_e1 - 1/0.3)) < difTemp:\n",
+    "            return every\n",
+    "\n",
+    "Temp = round(bustar_temp(Roots, Weights, Temperaturas, difTemp), 5)\n",
+    "\n",
+    "print(\"La temperatura crítica es: \", Temp ,\" K.\")\n"
    ]
   }
  ],
