--- a/taller3/taller3.ipynb
+++ b/taller3/taller3.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb7c2374",
+   "id": "2329bea5",
    "metadata": {},
    "source": [
     "**14.** El grupo de rotación $SU(2)$ (special unitary dim 2) describe\n",
@@ -615,8 +615,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "d6f8058c",
+   "execution_count": 38,
+   "id": "f7548146",
    "metadata": {
     "scrolled": false
    },
@@ -626,29 +626,29 @@
      "output_type": "stream",
      "text": [
       "Conmutación con (1,1)\n",
-      "[[ 0 -2]\n",
-      " [ 2  0]]\n",
+      "[[0 0]\n",
+      " [0 0]]\n",
       "Conmutación con (1,2)\n",
-      "[[ 0 -2]\n",
-      " [ 2  0]]\n",
+      "[[0.+2.j 0.+0.j]\n",
+      " [0.+0.j 0.-2.j]]\n",
       "Conmutación con (1,3)\n",
       "[[ 0 -2]\n",
       " [ 2  0]]\n",
       "Conmutación con (2,1)\n",
-      "[[0.+0.j 0.+2.j]\n",
-      " [0.+2.j 0.+0.j]]\n",
+      "[[0.-2.j 0.+0.j]\n",
+      " [0.+0.j 0.+2.j]]\n",
       "Conmutación con (2,2)\n",
-      "[[0.+0.j 0.+2.j]\n",
-      " [0.+2.j 0.+0.j]]\n",
+      "[[0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j]]\n",
       "Conmutación con (2,3)\n",
       "[[0.+0.j 0.+2.j]\n",
       " [0.+2.j 0.+0.j]]\n",
       "Conmutación con (3,1)\n",
-      "[[0 0]\n",
-      " [0 0]]\n",
+      "[[ 0  2]\n",
+      " [-2  0]]\n",
       "Conmutación con (3,2)\n",
-      "[[0 0]\n",
-      " [0 0]]\n",
+      "[[0.+0.j 0.-2.j]\n",
+      " [0.-2.j 0.+0.j]]\n",
       "Conmutación con (3,3)\n",
       "[[0 0]\n",
       " [0 0]]\n",
@@ -698,7 +698,7 @@
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        print(\"Conmutación con (%s,%s)\"%(i+1,j+1))\n",
-    "        print(conmutador(sigma[i],sigma[k]))\n",
+    "        print(conmutador(sigma[i],sigma[j]))\n",
     "        \n",
     "print(\"*\"*50)   \n",
     "A = np.zeros((2,2)).astype(np.complex128)\n",
@@ -714,17 +714,237 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eef20a9",
+   "id": "23900ce9",
    "metadata": {},
    "source": [
     "**15.**  La matrices de Dirac $\\{ \\gamma^0, \\gamma^1, \\gamma^2, \\gamma^3\\}$ son una representación\n",
     "del álgebra de Clifford $CL_{1,3}(\\mathbb{R})$, que transforman correctamente el espacio de espinores\n",
-    "de la teor´ıa cu´antica de campos:\n"
+    "de la teoría cuántica de campos:\n",
+    "$$ \\gamma^0 = \\begin{bmatrix} 1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & -1 & 0 \\\\ 0 & 0 & 0 & -1 \\end{bmatrix},\\  \\gamma^1 = \\begin{bmatrix} 0 & 0 & 0 & 1 \\\\ 0 & 0 & 1 & 0 \\\\ 0 & -1 & 0 & 0 \\\\ -1 & 0 & 0 & 0\\end{bmatrix},\\\\ \\gamma^2 = \\begin{bmatrix} 0 & 0 & 0 & -i \\\\ 0 & 0 & i & 0 \\\\ 0 & i & 0 & 0 \\\\ -i & 0 & 0 & 0 \\end{bmatrix},\\ \\gamma^3 = \\begin{bmatrix} 0 & 0 & 1 & 0 \\\\ 0 & 0 & 0 & -1 \\\\ -1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0 \\end{bmatrix}$$\n",
+    "\n",
+    "Verifique que el álgebra de Clifford está dada por una realción de anticonmutación. Esto es: $$\\{ \\gamma^\\mu, \\gamma^\\nu\\} =\\gamma^\\mu \\gamma^\\nu + \\gamma^\\nu\\gamma^\\mu = 2g^{\\mu\\nu}I_{4\\times4} $$\n",
+    "\n",
+    "con $$g^{\\mu\\nu} = \\begin{bmatrix} -1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & 1 & 0 \\\\ 0 & 0 & 0 & 1 \\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "46579382",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conmutación con (0,0)\n",
+      "[[2 0 0 0]\n",
+      " [0 2 0 0]\n",
+      " [0 0 2 0]\n",
+      " [0 0 0 2]]\n",
+      "Conmutación con (0,1)\n",
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n",
+      "Conmutación con (0,2)\n",
+      "[[0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n",
+      "Conmutación con (0,3)\n",
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n",
+      "Conmutación con (1,0)\n",
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n",
+      "Conmutación con (1,1)\n",
+      "[[-2  0  0  0]\n",
+      " [ 0 -2  0  0]\n",
+      " [ 0  0 -2  0]\n",
+      " [ 0  0  0 -2]]\n",
+      "Conmutación con (1,2)\n",
+      "[[0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n",
+      "Conmutación con (1,3)\n",
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n",
+      "Conmutación con (2,0)\n",
+      "[[0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n",
+      "Conmutación con (2,1)\n",
+      "[[0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n",
+      "Conmutación con (2,2)\n",
+      "[[-2.+0.j  0.+0.j  0.+0.j  0.+0.j]\n",
+      " [ 0.+0.j -2.+0.j  0.+0.j  0.+0.j]\n",
+      " [ 0.+0.j  0.+0.j -2.+0.j  0.+0.j]\n",
+      " [ 0.+0.j  0.+0.j  0.+0.j -2.+0.j]]\n",
+      "Conmutación con (2,3)\n",
+      "[[0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n",
+      "Conmutación con (3,0)\n",
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n",
+      "Conmutación con (3,1)\n",
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n",
+      "Conmutación con (3,2)\n",
+      "[[0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 0.+0.j]]\n",
+      "Conmutación con (3,3)\n",
+      "[[-2  0  0  0]\n",
+      " [ 0 -2  0  0]\n",
+      " [ 0  0 -2  0]\n",
+      " [ 0  0  0 -2]]\n",
+      "********************\n",
+      "Conmutación con (0,0)\n",
+      "[[-2. -0. -0. -0.]\n",
+      " [-0. -2. -0. -0.]\n",
+      " [-0. -0. -2. -0.]\n",
+      " [-0. -0. -0. -2.]]\n",
+      "Conmutación con (0,1)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (0,2)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (0,3)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (1,0)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (1,1)\n",
+      "[[2. 0. 0. 0.]\n",
+      " [0. 2. 0. 0.]\n",
+      " [0. 0. 2. 0.]\n",
+      " [0. 0. 0. 2.]]\n",
+      "Conmutación con (1,2)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (1,3)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (2,0)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (2,1)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (2,2)\n",
+      "[[2. 0. 0. 0.]\n",
+      " [0. 2. 0. 0.]\n",
+      " [0. 0. 2. 0.]\n",
+      " [0. 0. 0. 2.]]\n",
+      "Conmutación con (2,3)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (3,0)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (3,1)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (3,2)\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "Conmutación con (3,3)\n",
+      "[[2. 0. 0. 0.]\n",
+      " [0. 2. 0. 0.]\n",
+      " [0. 0. 2. 0.]\n",
+      " [0. 0. 0. 2.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gamma_0 = np.matrix([[1,0,0,0],\n",
+    "                    [0,1,0,0],\n",
+    "                    [0,0,-1,0],\n",
+    "                    [0,0,0,-1]])\n",
+    "\n",
+    "gamma_1 = np.matrix([[0,0,0,1],\n",
+    "                    [0,0,1,0],\n",
+    "                    [0,-1,0,0],\n",
+    "                    [-1,0,0,0]])\n",
+    "\n",
+    "gamma_2 = np.matrix([[0,0,0,-1J],\n",
+    "                    [0,0,1J,0],\n",
+    "                    [0,1J,0,0],\n",
+    "                    [-1J,0,0,0]])\n",
+    "\n",
+    "gamma_3 = np.matrix([[0,0,1,0],\n",
+    "                    [0,0,0,-1],\n",
+    "                    [-1,0,0,0],\n",
+    "                    [0,1,0,0]])\n",
+    "\n",
+    "g = np.matrix([[-1,0,0,0],\n",
+    "                    [0,1,0,0],\n",
+    "                    [0,0,1,0],\n",
+    "                    [0,0,0,1]])\n",
+    "\n",
+    "gamma = [gamma_0,gamma_1,gamma_2,gamma_3]\n",
+    "\n",
+    "for i in range(4):\n",
+    "    for j in range(4):\n",
+    "        print(\"Conmutación con (%s,%s)\"%(i,j))\n",
+    "        print(gamma[i]@gamma[j] + gamma[j]@gamma[i])\n",
+    "\n",
+    "print(\"*\"*20)\n",
+    "\n",
+    "for i in range(4):\n",
+    "    for j in range(4):\n",
+    "        print(\"Conmutación con (%s,%s)\"%(i,j))\n",
+    "        print(2*g[i,j]*np.identity(4))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88ba2159",
+   "id": "e9953181",
    "metadata": {},
    "source": [
     "# Mínimos cuadrados"
@@ -732,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3db38bb",
+   "id": "518e50b0",
    "metadata": {},
    "source": [
     "**6.** Este punto se puede encontrar en la carpeta: 'adicionales/punto6'"
@@ -740,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0946e428",
+   "id": "90a8242e",
    "metadata": {},
    "source": [
     "**7.** "
