--- a/parcial3/parcial3.ipynb
+++ b/parcial3/parcial3.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "id": "f3ba9c92",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import sympy as sym\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "x,y = sym.symbols(\"x y\",real=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5633fd8e",
+   "execution_count": 118,
+   "id": "abbaadd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5202fab1",
+   "execution_count": 119,
+   "id": "2ada7097",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,28 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "30daaf83",
+   "execution_count": 120,
+   "id": "73da4a42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "F_ = [sym.re(function(z)),sym.im(function(z))]\n"
+    "F_ = [sym.re(function(z)),sym.im(function(z))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "155a6315",
+   "execution_count": 121,
+   "id": "7764a81f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<function _lambdifygenerated at 0x000002CAA655A9D0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = [x,y]\n",
     "\n",
@@ -71,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "0e7c329f",
+   "execution_count": 122,
+   "id": "a7ec4ef1",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +80,7 @@
        "-0.5 + sqrt(3)*I/2"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "44392c0b",
+   "execution_count": 123,
+   "id": "ba244fae",
    "metadata": {},
    "outputs": [
     {
@@ -109,13 +105,13 @@
     }
    ],
    "source": [
-    "def NewtonRaphson(F,J,z0,itmax = 1000,e= 1e-7):\n",
+    "def NewtonRaphson(F,J,z0,itmax = 1000,epsilon= 1e-7):\n",
     "    i = 0\n",
     "    zn_1 = z0\n",
     "    while i < itmax:\n",
     "        i+=1\n",
     "        zn = zn_1 - np.linalg.inv(J(zn_1[0],zn_1[1]))@Fn(zn_1[0],zn_1[1])\n",
-    "        if np.linalg.norm(zn - zn_1) <= e:\n",
+    "        if np.linalg.norm(zn - zn_1) <= epsilon:\n",
     "            break\n",
     "        zn_1 = zn\n",
     "    return zn_1\n",
@@ -127,7 +123,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c312aef8",
+   "id": "b5e16cea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 500\n",
+    "x_ = np.linspace(-1,1,N)\n",
+    "y_ = np.linspace(-1,1,N)\n",
+    "Fractal = np.zeros((N,N),np.int64)\n",
+    "z0 = np.array([-0.5,np.sqrt(3)/2])\n",
+    "z1 = np.array([-0.5,-np.sqrt(3)/2])\n",
+    "z2 = np.array([1,0])\n",
+    "\n",
+    "for i in range(len(x_)):\n",
+    "    for j in range(len(y_)):\n",
+    "        root = NewtonRaphson(Fn,J,[x_[i],y_[j]])\n",
+    "        if np.linalg.norm(root -z0) <= 1e-7:\n",
+    "            Fractal[i][j] = 20\n",
+    "        elif np.linalg.norm(root -z1) <= 1e-7:\n",
+    "            Fractal[i][j] = 100\n",
+    "        else:\n",
+    "            Fractal[i][j] = 255\n",
+    "plt.imshow(Fractal, cmap = \"coolwarm\", extent = [-1,1,-1,1])\n",
+    "                        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77731baf",
    "metadata": {},
    "outputs": [],
    "source": []
