--- a/Taller 4.ipynb
+++ b/Taller 4.ipynb
@@ -531,8 +531,8 @@
     "desvest_up=np.percentile(desvest_selected,84)\n",
     "\n",
     "\n",
-    "print(\"Los valores sigma+- de mu en un intervalo de confianza del CL = 68% son: \", mediana_miu - miu_low , \"y\", abs(mediana_miu - miu_up ) )\n",
-    "print(\"Los valores sigma+- de sigma en un intervalo de confianza del CL = 68% son: \", mediana_desvest - desvest_low , \"y\", abs(mediana_desvest - desvest_up) )\n"
+    "print(\"Los valores sigma+- de mu en un intervalo de confianza del CL = 68% son: \", mediana_miu - miu_low , \"y\", miu_up - mediana_miu  )\n",
+    "print(\"Los valores sigma+- de sigma en un intervalo de confianza del CL = 68% son: \", mediana_desvest - desvest_low , \"y\", -mediana_desvest + desvest_up)\n"
    ]
   }
  ],
