--- a/parcial_final/parcial_final.ipynb
+++ b/parcial_final/parcial_final.ipynb
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 257,
    "id": "b8f06f08",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El estimador para λ = 30 es  7.064365424496193e-05  y los intervalos son  6.000942699185847e-05 y 8.245946230396577e-05\n"
+      "El estimador para lambda = 30 es  4.096815427748644e-05  y los intervalos son  3.4375022362824166e-05 y 4.829385640488897e-05\n"
      ]
     }
    ],
@@ -644,7 +644,7 @@
     "    return yeah[ij], yeah[ji], yeah[ii]\n",
     "\n",
     "pequeña, grande, mejor = mejor_estimador_datos(H2, binsx)\n",
-    "print(\"El estimador para λ = 30 es \", mejor, \" y los intervalos son \", pequeña, \"y\", grande)\n"
+    "print(\"El estimador para lambda = 30 es \", mejor, \" y los intervalos son \", pequeña, \"y\", grande)\n"
    ]
   },
   {
@@ -652,7 +652,7 @@
    "id": "868ad0e4",
    "metadata": {},
    "source": [
-    "**(j)** Para la latitud λ = 30, El mejor estimador es aproximadamente ωˆ = 7.30 × 10−5 y el intervalo de confianza a 1σ es:"
+    "**(j)** Para la latitud $ \\lambda = 30$, El mejor estimador es aproximadamente $\\omega = 7.30 \\times 10^{−5}$ y el intervalo de confianza a $1\\sigma$ es:"
    ]
   },
   {
