--- a/parcial_final/parcial_final.ipynb
+++ b/parcial_final/parcial_final.ipynb
@@ -705,7 +705,7 @@
     "print(y__)\n",
     "\n",
     "y__.append(np.sum(y__)/len(y__))\n",
-    "error__.append(np.sum(y__)/len(y__))\n",
+    "error__.append(np.sum(error__)/len(error__))",
     "\n",
     "    "
    ]
